2010-10-07  Balazs Kelemen  <kbalazs@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Watchdog timer implementation for WTR
        https://bugs.webkit.org/show_bug.cgi?id=47337

        * WebKitTestRunner/InjectedBundle/LayoutTestController.h: Factor out
        the definition of the timer type to a typedef.
        * WebKitTestRunner/InjectedBundle/qt/LayoutTestControllerQt.cpp: Added.
        Timer implementation with QTimer and a helper QObject class.
        (WTR::WatchdogTimerHelper::instance):
        (WTR::WatchdogTimerHelper::timerFired):
        (WTR::WatchdogTimerHelper::WatchdogTimerHelper):
        (WTR::LayoutTestController::platformInitialize):
        (WTR::LayoutTestController::invalidateWaitToDumpWatchdogTimer):
        (WTR::LayoutTestController::initializeWaitToDumpWatchdogTimerIfNeeded):

2010-10-07  Balazs Kelemen  <kbalazs@webkit.org>

        Unreviewed buildfix for 69297 again

        * WebKitTestRunner/TestController.cpp:
        (WTR::blankURL):

2010-10-07  Balazs Kelemen  <Balazs Kelemen>

        Unreviewed trivial build fix for r69297

        * WebKitTestRunner/TestController.cpp:
        (WTR::blankURL):

2010-10-07  Balazs Kelemen  <kbalazs@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        WebKitTestRunner should be portable
        https://bugs.webkit.org/show_bug.cgi?id=45393

        Use only the WebKit API for working with urls.
        * WebKitTestRunner/StringFunctions.h:
        (WTR::createWKURL):
        * WebKitTestRunner/TestController.cpp:
        (WTR::blankURL):
        (WTR::TestController::resetStateToConsistentValues):
        (WTR::TestController::didFinishLoadForFrame):

2010-10-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Use gtk_widget_draw() instead of gtk_widget_get_snapshot() in PixelDumpSupportGtk when building with gtk3
        https://bugs.webkit.org/show_bug.cgi?id=47332
